main.css
/* ... */
.portfolio-description:hover .cta {
  color: #2f67cd;
}
/*End portfolio*/

/*Start timeline*/

.timeline ul {
  border-left: 4px solid #ffe838;
  /*border-radius: .8rem;*/
  /*background-color: rgba(0, 0, 0, 0.05);*/
  margin: 0 auto;
  position: relative;
  padding: 5rem;
  list-style: none;
  text-align: left;
  width: 70%;
}

.timeline h1 {
  font-size: 2rem;
  text-transform: uppercase;
  font-weight: 300;
  margin-bottom: 1rem;
  opacity: 0.3;
}

.timeline .date {
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
  margin-bottom: 1rem;
  padding-bottom: 1rem;
  position: relative;
}

.timeline .date:last-of-type {
  padding-bottom: 0;
  margin-bottom: 0;
  border: none;
}
.timeline .date::before,
.timeline .date::after {
  position: absolute;
  display: block;
  top: 50%;
  transform: translateY(-50%);
}

.timeline .date::before {
  content: attr(data-date);
  left: -21rem;
  text-align: right;
  min-width: 12rem;
  font-size: 1.5rem;
}

.timeline .date::after {
  content: "";
  box-shadow: 0 0 0 4px #fd57bf;
  border-radius: 100%;
  left: -8rem; /*Skewed??*/
  height: 1.5rem;
  width: 1.5rem;
  background-color: #313534;
}

/*End timeline*/

/*Start contact*/
.contact {
  /*background-color: #221e3f;*/ /*Maybe some color??*/
}

form {
  width: 70%;
  margin: 0 auto;
}

form label {
  font-size: 1.5rem;
}

input,
select,
textarea {
  width: 100%;
  padding: 1rem;
  margin-bottom: 5px;
  border: none;
  outline-color: #fd57bf;
}

input[type="submit"] {
  width: initial;
  background-color: #eee;
  color: #333;
  padding: 1rem 2rem;
  border-radius: 0.8rem;
  cursor: pointer;
  transition: background-color 650ms;
}

input[type="submit"]:hover {
  color: #fff;
  background-color: rgb(0, 192, 0);;
}
/*End contact*/

/*Start footer*/

.footer {
  width: 100%;
  text-align: center;
  background-color: #151515;
  padding: 1.8rem 0;
  position: relative;
}

.up {
  position: absolute;
  width: 5rem;
  height: 5rem;
  background-color: #eee;
  top: -2.5rem;
  right: 5rem;
  border-radius: 100%;
  display: flex;
  animation: pulse 2s infinite;
  cursor: pointer;
}

.up i {
  color: #16162d;
  font-size: 2rem;
  margin: auto;
}

.footer p {
  font-size: 1.3rem;
}

.github {
  position: absolute;
  width: 5rem;
  xheight: 5rem;
  font-size: 4rem;
  bxackground-color: #eee;
  top: 0.3rem;
  xright: 5rem;
  xborder-radius: 100%;
  xdisplay: flex;
  xanimation: pulse 2s infinite;
  xcursor: pointer;
}
/*End footer*/

/*Start animations*/

@keyframes pulse {
  0% {
    box-shadow: 0 0 0 0 rgba(253, 87, 191, 0.99);
  }
  70% {
    box-shadow: 0 0 0 2rem rgba(253, 87, 191, 0);
  }
  100% {
    box-shadow: 0 0 0 0 rgba(255, 0, 19, 0.99);
    /*box-shadow: 0 0 0 0 rgba(253, 87, 191, 0.99);*/
  }
}
/*End animations*/

/*Start media queries*/

@media only screen and (min-width:320px) and (max-width: 359px) {
  .container {
    width: 80%;
  }
  .landing-text h1 {
    font-size: 1rem;
  }

  .about .container {
    flex-direction: column;
  }

  .profile-img {
    margin-bottom: 5rem;
  }

  .about-heading h1 {
    font-size: 3.7rem;
  }

  .above-list li {
    font-size: 1.6rem;
  }

  .tutorials-description {
    width: 90%;
    transform: translateX(10%);
    font-size: 1.5rem;
  }
  
.list-heading {
  font-size: 1.7rem;
}

.interests li {
  font-size: 1.3rem;
}

  .tutorials-description-why {
    width: 90%;
    transform: translateX(10%);
  }
  
  .my-skills {
    flex-direction: column;
  }

  .skill p {
    width: 70%;
  }

  .icon-container {
    margin: 0;
  }

  .portfolio-item {
    flex-direction: column;
  }

  .portfolio-img {
    order: 1;
  }

  .portfolio-description {
    order: 2;
  }

  .portfolio-description h1 {
    font-size: 2.2rem;
  }

  .portfolio-description p {
    font-size: 1.5rem;
  }

  .portfolio-description .cta {
    font-size: 1.2rem;
    margin-top: 1.5rem;
  }

  form {
    width: 95%;
    margin: 0 auto;
  }

.nav-list {
  flex-direction: column;
}

  .nav-link {
    font-size: 3rem;
  }

  .top-nav ul li {
    height: 7rem;
  }

  /*Mér finnst asnalegt að hafa hamburger á litlum skjá.
  Tekur of mikið pláss og mér finnst það óþarfi
  því maður scroll-ar hvort sem er bara*/
 .menu-toggler {
  visibility: hidden;
  }

 /*Menu toggler END*/

 .footer p {
   font-size: 1rem;
 }

 .up {
   right: 2rem;
 }
}

@media only screen and (min-width: 360px) and (max-width: 599px){
  .container {
    width: 80%;
  }
  .landing-text h1 {
    font-size: 1.2rem;
  }

  .about .container {
    flex-direction: column;
  }

  .profile-img {
    margin-bottom: 5rem;
  }

  .about-heading h1 {
    font-size: 4rem;
  }

  .tutorials-description {
    width: 90%;
    transform: translateX(10%);
    font-size: 1.5rem;
  }
  
  .tutorials-description-why {
    width: 90%;
    transform: translateX(10%);
  }
  
  .my-skills {
    flex-direction: column;
  }

  .skill p {
    width: 70%;
  }

  .icon-container {
    margin: 0;
  }

  .portfolio-item {
    flex-direction: column;
  }

  .portfolio-img {
    order: 1;
  }

  .portfolio-description {
    order: 2;
  }

  .portfolio-description h1 {
    font-size: 2.2rem;
  }

  .portfolio-description p {
    font-size: 1.5rem;
  }

  .portfolio-description .cta {
    font-size: 1.2rem;
    margin-top: 1.5rem;
  }

  form {
    width: 95%;
    margin: 0 auto;
  }

.nav-list {
  flex-direction: column;
}

  .nav-link {
    font-size: 3.5rem;
  }

  .top-nav ul li {
    height: 7rem;
  }
  /*Mér finnst asnalegt að hafa hamburger á litlum skjá.
  Tekur of mikið pláss og mér finnst það óþarfi
  því maður scroll-ar hvort sem er bara*/
  .menu-toggler {
    visibility: hidden;
    }
}
/* ... */

